# EasyFuse

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTE.md  Dockerfile  Documentation.docx  Easyfuse_Documentation_URLA_20181203.docx  INSTALL  MANIFEST.in  Makefile  README.md  _version.py  build_env.sh.sample  calculate_wt_counts.py  config.ini.docker  config.ini.sample  config.py.sample  config_default.ini  custom_transcriptome.py  denovoassembly.py  dependency_versions.txt  easyfuse_config.py  easyfuse_config_default.ini  easyfuse_denovoassembly.py  easyfuse_dependency_versions.txt  easyfuse_fetchdata.py  easyfuse_fusionranking.py  easyfuse_fusionreadfilter.py  easyfuse_fusiontoolparser.py  easyfuse_iomethods.py  easyfuse_logger.py  easyfuse_processing.py  easyfuse_reformatfasta.py  easyfuse_requantify.py  easyfuse_samples.py  easyfuse_scheduling.py  easyfuse_stats.py  easyfuse_statscollect.py  easyfuse_versioncontrol.py  (+29 more)
.github/workflows/: integration_tests.yml  unit_tests.yml
Docker/: Dockerfile  build_docker.sh  build_docker_img_test.sh  convert_docker_to_singularity.sh  run_docker.sh  run_docker_img_interactive.sh  run_docker_img_test.sh  run_docker_interactive.sh  run_singularity.sh  run_singularity_img_test.sh
R/: GTFtoCSV.R  GetFusionSequence.R  R_model_prediction.R  flat_table.R  model_prediction.R  model_prediction_urla.R  prediction_functions.R  train_model.R
config/: resources.config
data/model/: Fusion_modeling_FFPE_deploy_v01.model_full_data.EasyFuse_model.rds  Fusion_modeling_FFPE_deploy_v01.model_full_data.EasyFuse_model_rep.rds  (+22 more)
documentation/: EasyFuseProcess.pptx
easy_fuse/: __init__.py  command_line.py  fetchdata.py  fusionannotation.py  fusionreadfilter.py  fusiontoolparser.py  fusiontoolparser_helper.py  getRequantReads.py  join_data.py  processing.py  read_selection.py  requantify.py  summarize_data.py  tests.py
easy_fuse/misc/: config.py  io_methods.py  (+6 more)
environments/: alignment.yml  annotation.yml  arriba.yml  easyfuse_src.yml  filtering.yml  fusioncatcher.yml  fusionparsing.yml  merging.yml  prediction.yml  qc.yml  requantification.yml  requantification_wo_easyfuse.yml  samtools.yml  starfusion.yml  summarize_data.yml
installation/: installation.sh
integration_tests/: README.md  run_test.sh
misc/: all_done.py  config.py  count_input_reads.py  io_methods.py  liftover.py  logger.py  qc_parser.py  queue.py  queueing.py  samples.py  version.py  versioncontrol.py
modules/: 01_qc.nf  02_alignment.nf  03_fusion_callers.nf  04_fusionparsing.nf  04_joint_fusion_calling  04_joint_fusion_calling.nf  05_fusionannotation.nf  05_requantification.nf  06_summarize.nf
ref_data/: GTFtoCSV.R  gff3_to_db.py  gtf2tsl.py  reformat_genome_fasta.py
resources/: blacklist.txt.sample  build_env.sh.sample  config.ini.docker  config.ini.sample
test_case/: SRR1659960_05pc_fusRank_1.csv  SRR1659960_05pc_refOut.csv  test_input.csv
tests/: test_format_seq_table.yaml  test_fusionannotation.yaml  test_fusionreadfilter.yaml  test_fusiontoolparser.yaml  test_merge_data.yaml
tool_wrapper/: mapsplice_wrapper.py  skewer_wrapper.py  soapfuse_wrapper.py  star_custom_index.py
(+83 files in other folders)
