[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-fuse"
authors = [
    {name = "Patrick Sorn", email = "patrick.sorn@tron-mainz.edu"},
    {name = "Jonas Ibn-Salem", email = "jonas.ibn-salem@tron-mainz.edu"},
    {name = "Christoph Holsträter", email = "christoph.holstraeter@tron-mainz.edu"},
    {name = "David Weber", email = "david.weber@tron-mainz.edu"},
    {name = "Pablo Riesgo-Ferreiro", email = "pablo.riesgo-ferreiro@tron-mainz.edu"},
]
description = "EasyFuse is a pipeline to detect fusion transcripts from RNA-seq data with high accuracy."
readme = "README.md"
requires-python = ">=3.7,<3.8"
keywords = ["bioinformatics", "fusions", "RNA-seq", "transcriptomics"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",  # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "numpy==1.21.6",
    "pandas==0.24.0",
    #python-lzo==1.12
    "xxhash==1.4.3",
    "biopython==1.73",
    "pysam==0.15.2",
    "gffutils==0.10.1",
    "bx-python==0.8.2",
    "logzero==1.7.0",
]
dynamic = ["version"]

[tool.setuptools]
py-modules = ["easy_fuse"]

[tool.setuptools.dynamic]
version = {attr = "easy_fuse.__version__"}

[project.scripts]
easy-fuse = "easy_fuse.command_line:easy_fuse_cli"
