[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easy-fuse"
version = "2.0.0a1"
authors = [
    "Patrick Sorn <patrick.sorn@tron-mainz.edu>",
    "Jonas Ibn-Salem <jonas.ibn-salem@tron-mainz.edu>",
    "Christoph Holsträter <christoph.holstraeter@tron-mainz.edu>",
    "David Weber <david.weber@tron-mainz.edu>",
    "Pablo Riesgo-Ferreiro <pablo.riesgo-ferreiro@tron-mainz.edu>",
]
description = "EasyFuse is a pipeline to detect fusion transcripts from RNA-seq data with high accuracy."
readme = "README.md"
keywords = ["bioinformatics", "fusions", "RNA-seq", "transcriptomics"]
license = "LICENSE"
classifiers = [
    "Development Status :: 3 - Alpha",  # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.7",
]
packages = [{include = "easy_fuse"}]

[tool.setuptools]
py-modules = ["easy_fuse"]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
numpy = "1.21.6"
pandas = "0.24.0"
xxhash = "1.4.3"
biopython = "1.73"
pysam = "0.15.2"
gffutils = "0.10.1"
bx-python = "0.8.2"
logzero = "1.7.0"
pytz = "2022.7.1"

[tool.setuptools.dynamic]
version = {attr = "easy_fuse.__version__"}

[tool.poetry.scripts]
easy-fuse = "easy_fuse.command_line:easy_fuse_cli"
